fix: overflow property

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -38,6 +38,8 @@ html {
 .terms {
   height: 400px;
   padding: 70px;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .button-container {
